# PressureProcess

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
pressureprocess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: config_params.py  run_pipeline.py
src/checks/plot/: F_freestreamp_SU_production.py  F_freestreamp_SU_raw.py  G_wallp_SU_production.py  G_wallp_SU_raw.py  SU_two_point.py  _style.py  run_all.py
src/checks/plot_bump/: production.py  raw.py
src/checks/plot_fence/: production.py  raw.py
src/core/: apply_frf.py  wiener_filter_torch.py
src/save/: calibs.py  fs_proc.py  fs_raw.py  pw_proc.py  pw_raw.py  run_all.py
tests/: test_config_params.py  test_memory_hotpaths.py  test_plot_run_all.py  test_plot_style.py  test_run_pipeline.py
