[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pressureprocess"
version = "0.1.0"
description = "Pressure processing for two microphones"
readme = "README.md"
dependencies = [
  "h5py",
  "tqdm",
  "numpy",
  "scipy",
  "matplotlib",
  "seaborn",
  "icecream",
  "scienceplots",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
